--- a/.github/workflows/regular_update_rpm.yml
+++ b/.github/workflows/regular_update_rpm.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Download RPM 2 - electerm
         run: |
-            RPM_URL="$(curl -sL https://github.com/electerm/electerm/releases/latest | grep -wo "https.*x86_64.rpm")"
+            RPM_URL="$(curl -s https://api.github.com/repos/electerm/electerm/releases/latest | jq -r '.assets[] | .browser_download_url | select(test("x86_64\\.rpm$"))' | head -1)"
             RPM_FILE="rpms/electerm-latest.rpm"
             curl -L -o ${RPM_FILE} ${RPM_URL}
 
