--- a/.github/workflows/update_rpm.yml
+++ b/.github/workflows/update_rpm.yml
@@ -25,14 +25,24 @@ jobs:
       - name: Download RPM 1 - rustdesk
         run: |
             RPM_URL="$(curl -sL https://github.com/rustdesk/rustdesk/releases/latest | grep -wo "https.*x86_64.rpm")"
-            RPM_FILE="rpms/rustdesk-latest.rpm"
-            curl -L -o ${RPM_FILE} ${RPM_URL}
+            RPM_FILE=rpms/$(basename "$RPM_URL")
+            if [ -f "${RPM_FILE}" ]; then
+                echo "File ${RPM_FILE} already exists, skipping download."
+            else
+                rm -f rpms/rustdesk*.rpm
+                curl -L -o ${RPM_FILE} ${RPM_URL}
+            fi
 
       - name: Download RPM 2 - electerm
         run: |
             RPM_URL="$(curl -s https://api.github.com/repos/electerm/electerm/releases/latest | jq -r '.assets[] | .browser_download_url | select(test("x86_64\\.rpm$"))' | head -1)"
-            RPM_FILE="rpms/electerm-latest.rpm"
-            curl -L -o ${RPM_FILE} ${RPM_URL}
+            RPM_FILE=rpms/$(basename "$RPM_URL")
+            if [ -f "${RPM_FILE}" ]; then
+                echo "File ${RPM_FILE} already exists, skipping download."
+            else
+                rm -f rpms/electerm*.rpm
+                curl -L -o ${RPM_FILE} ${RPM_URL}
+            fi
 
     ### Update the repository
       - name: Update Repository Metadata
@@ -41,4 +51,4 @@ jobs:
       - name: Commit and Push Changes      # Commit all changed files back to the repository
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Automatic update latest RPMs"
+          commit_message: "Auto update latest release RPMs"
