--- a/.github/workflows/#update_rpm_(retired).yml
+++ b/.github/workflows/#update_rpm_(retired).yml
@@ -1,7 +1,7 @@
 ### NOTE: schedule-strigger only run on default branch
 name: Download multiple RPMs
 
-# on:  # Trigger manually or on a schedule (e.g., weekly)
+on:  # Trigger manually or on a schedule (e.g., weekly)
 #   workflow_dispatch: # Manual trigger
 #   schedule:
 #     - cron: '0 0 * * 0' # Weekly on Sunday at midnight
